crates/otio-capi/include/otio.h


typedef enum OtioStatus {
    OTIO_STATUS_OK = 0,
    OTIO_STATUS_NULL_POINTER = 1,
    OTIO_STATUS_INVALID_UTF8 = 2,
    OTIO_STATUS_NO_VALUE = 3,
    OTIO_STATUS_STALE_HANDLE = 4,
    OTIO_STATUS_INVALID_ARGUMENT = 5,
    OTIO_STATUS_CORE_ERROR = 6,
    OTIO_STATUS_TIME_ERROR = 7,
    OTIO_STATUS_PARSE_ERROR = 8,
    OTIO_STATUS_UNSUPPORTED = 9,
    OTIO_STATUS_IO_ERROR = 10,
    OTIO_STATUS_PANIC = 11
} OtioStatus;
typedef struct OtioBuffer {
    char *data;
    size_t len;
} OtioBuffer;
typedef struct OtioRationalTime {
    double value;
    double rate;
} OtioRationalTime;
typedef struct OtioTimeRange {
    OtioRationalTime start_time;
    OtioRationalTime duration;
} OtioTimeRange;
typedef struct OtioColor {
    double r;
    double g;
    double b;
    double a;
} OtioColor;
typedef struct OtioDocument OtioDocument;
typedef struct OtioNode {
    uint32_t index;
    uint32_t generation;
} OtioNode;
typedef enum OtioMissingFramePolicy {
    OTIO_MISSING_FRAME_ERROR = 0,
    OTIO_MISSING_FRAME_BLACK = 1,
    OTIO_MISSING_FRAME_HOLD = 2
} OtioMissingFramePolicy;
typedef struct OtioImageSequence {
    int64_t start_frame;
    int64_t frame_step;
    double rate;
    int64_t frame_zero_padding;
    OtioMissingFramePolicy missing_frame_policy;
} OtioImageSequence;
typedef enum OtioFormat {
    OTIO_FORMAT_OTIO_JSON = 0,
    OTIO_FORMAT_ALE = 1,
    OTIO_FORMAT_CMX_3600 = 2,
    OTIO_FORMAT_FCP7_XML = 3,
    OTIO_FORMAT_FCPX_XML = 4
} OtioFormat;
const char *otio_error_message(void);
const char *otio_status_name(OtioStatus status);
const char *otio_version(void);
void otio_buffer_free(OtioBuffer buffer);
size_t otio_default_indent(void);
OtioStatus otio_gap_new(OtioDocument *target, const char *name, OtioNode *out_node);
OtioStatus otio_item_new(OtioDocument *target, const char *name, OtioNode *out_node);
OtioStatus otio_marker_new(
    OtioDocument *target,
    const char *name,
    OtioTimeRange marked_range,
    OtioNode *out_node);
OtioStatus otio_effect_new(
    OtioDocument *target,
    const char *name,
    const char *effect_name,
    OtioNode *out_node);
OtioStatus otio_linear_time_warp_new(
    OtioDocument *target,
    const char *name,
    double time_scalar,
    OtioNode *out_node);
OtioStatus otio_freeze_frame_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
OtioStatus otio_external_reference_new(
    OtioDocument *target,
    const char *name,
    const char *target_url,
    OtioNode *out_node);
OtioStatus otio_generator_reference_new(
    OtioDocument *target,
    const char *name,
    const char *generator_kind,
    OtioNode *out_node);
OtioStatus otio_image_sequence_reference_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
OtioStatus otio_item_source_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_item_set_source_range(
    OtioDocument *target,
    OtioNode node_handle,
    OtioTimeRange range);
OtioStatus otio_item_clear_source_range(OtioDocument *target, OtioNode node_handle);
OtioStatus otio_item_enabled(
    const OtioDocument *source,
    OtioNode node_handle,
    bool *out_enabled);
OtioStatus otio_item_set_enabled(
    OtioDocument *target,
    OtioNode node_handle,
    bool enabled);
OtioStatus otio_item_color(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioColor *out_color,
    OtioBuffer *out_name);
OtioStatus otio_item_set_color(
    OtioDocument *target,
    OtioNode node_handle,
    OtioColor color,
    const char *name);
OtioStatus otio_item_clear_color(OtioDocument *target, OtioNode node_handle);
OtioStatus otio_item_marker_count(
    const OtioDocument *source,
    OtioNode node_handle,
    size_t *out_count);
OtioStatus otio_item_marker_at(
    const OtioDocument *source,
    OtioNode node_handle,
    size_t index,
    OtioNode *out_marker);
OtioStatus otio_item_append_marker(
    OtioDocument *target,
    OtioNode node_handle,
    OtioNode marker_handle);
OtioStatus otio_item_remove_marker(
    OtioDocument *target,
    OtioNode node_handle,
    size_t index,
    OtioNode *out_marker);
OtioStatus otio_item_effect_count(
    const OtioDocument *source,
    OtioNode node_handle,
    size_t *out_count);
OtioStatus otio_item_effect_at(
    const OtioDocument *source,
    OtioNode node_handle,
    size_t index,
    OtioNode *out_effect);
OtioStatus otio_item_append_effect(
    OtioDocument *target,
    OtioNode node_handle,
    OtioNode effect_handle);
OtioStatus otio_item_remove_effect(
    OtioDocument *target,
    OtioNode node_handle,
    size_t index,
    OtioNode *out_effect);
OtioStatus otio_marker_marked_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_marker_set_marked_range(
    OtioDocument *target,
    OtioNode node_handle,
    OtioTimeRange range);
OtioStatus otio_marker_comment(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_comment);
OtioStatus otio_marker_set_comment(
    OtioDocument *target,
    OtioNode node_handle,
    const char *comment);
OtioStatus otio_marker_color(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioColor *out_color,
    OtioBuffer *out_name);
OtioStatus otio_marker_set_color(
    OtioDocument *target,
    OtioNode node_handle,
    OtioColor color,
    const char *name);
OtioStatus otio_effect_set_effect_name(
    OtioDocument *target,
    OtioNode node_handle,
    const char *effect_name);
OtioStatus otio_effect_set_enabled(
    OtioDocument *target,
    OtioNode node_handle,
    bool enabled);
OtioStatus otio_effect_time_scalar(
    const OtioDocument *source,
    OtioNode node_handle,
    double *out_scalar);
OtioStatus otio_effect_set_time_scalar(
    OtioDocument *target,
    OtioNode node_handle,
    double scalar);
OtioStatus otio_external_reference_target_url(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_url);
OtioStatus otio_external_reference_set_target_url(
    OtioDocument *target,
    OtioNode node_handle,
    const char *url);
OtioStatus otio_generator_reference_kind(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_kind);
OtioStatus otio_generator_reference_set_kind(
    OtioDocument *target,
    OtioNode node_handle,
    const char *kind);
OtioStatus otio_image_sequence_reference_numbers(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioImageSequence *out_numbers);
OtioStatus otio_image_sequence_reference_set_numbers(
    OtioDocument *target,
    OtioNode node_handle,
    OtioImageSequence numbers);
OtioStatus otio_image_sequence_reference_target_url_base(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_url_base);
OtioStatus otio_image_sequence_reference_set_target_url_base(
    OtioDocument *target,
    OtioNode node_handle,
    const char *url_base);
OtioStatus otio_image_sequence_reference_name_prefix(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_prefix);
OtioStatus otio_image_sequence_reference_set_name_prefix(
    OtioDocument *target,
    OtioNode node_handle,
    const char *prefix);
OtioStatus otio_image_sequence_reference_name_suffix(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_suffix);
OtioStatus otio_image_sequence_reference_set_name_suffix(
    OtioDocument *target,
    OtioNode node_handle,
    const char *suffix);
OtioStatus otio_item_duration(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioRationalTime *out_duration);
OtioStatus otio_item_available_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_item_trimmed_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_item_visible_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_item_range_in_parent(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_item_trimmed_range_in_parent(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
double otio_default_epsilon_s(void);
const char *otio_format_name(OtioFormat format);
OtioStatus otio_format_from_suffix(const char *suffix, OtioFormat *out_format);