sdk/csharp/OpenTimelineIO/Interop.cs


    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_effect_new(IntPtr target, IntPtr name, IntPtr effectName, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_effect_set_effect_name(IntPtr target, Native.OtioNode nodeHandle, IntPtr effectName);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_effect_set_enabled(IntPtr target, Native.OtioNode nodeHandle, byte enabled);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_effect_set_time_scalar(IntPtr target, Native.OtioNode nodeHandle, double scalar);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_effect_time_scalar(IntPtr source, Native.OtioNode nodeHandle, out double outScalar);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_external_reference_new(IntPtr target, IntPtr name, IntPtr targetUrl, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_external_reference_set_target_url(IntPtr target, Native.OtioNode nodeHandle, IntPtr url);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_external_reference_target_url(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outUrl);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_format_from_suffix(IntPtr suffix, out Format outFormat);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr otio_format_name(Format format);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_freeze_frame_new(IntPtr target, IntPtr name, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_gap_new(IntPtr target, IntPtr name, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_generator_reference_kind(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outKind);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_generator_reference_new(IntPtr target, IntPtr name, IntPtr generatorKind, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_generator_reference_set_kind(IntPtr target, Native.OtioNode nodeHandle, IntPtr kind);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_image_sequence_reference_name_prefix(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outPrefix);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_image_sequence_reference_name_suffix(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outSuffix);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_image_sequence_reference_new(IntPtr target, IntPtr name, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_image_sequence_reference_numbers(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioImageSequence outNumbers);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_image_sequence_reference_set_name_prefix(IntPtr target, Native.OtioNode nodeHandle, IntPtr prefix);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_image_sequence_reference_set_name_suffix(IntPtr target, Native.OtioNode nodeHandle, IntPtr suffix);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_image_sequence_reference_set_numbers(IntPtr target, Native.OtioNode nodeHandle, Native.OtioImageSequence numbers);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_image_sequence_reference_set_target_url_base(IntPtr target, Native.OtioNode nodeHandle, IntPtr urlBase);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_image_sequence_reference_target_url_base(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outUrlBase);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_append_effect(IntPtr target, Native.OtioNode nodeHandle, Native.OtioNode effectHandle);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_append_marker(IntPtr target, Native.OtioNode nodeHandle, Native.OtioNode markerHandle);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_available_range(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_clear_color(IntPtr target, Native.OtioNode nodeHandle);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_clear_source_range(IntPtr target, Native.OtioNode nodeHandle);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_color(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioColor outColor, out Native.OtioBuffer outName);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_duration(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioRationalTime outDuration);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_effect_at(IntPtr source, Native.OtioNode nodeHandle, nuint index, out Native.OtioNode outEffect);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_effect_count(IntPtr source, Native.OtioNode nodeHandle, out nuint outCount);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_enabled(IntPtr source, Native.OtioNode nodeHandle, out byte outEnabled);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_marker_at(IntPtr source, Native.OtioNode nodeHandle, nuint index, out Native.OtioNode outMarker);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_marker_count(IntPtr source, Native.OtioNode nodeHandle, out nuint outCount);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_new(IntPtr target, IntPtr name, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_range_in_parent(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_remove_effect(IntPtr target, Native.OtioNode nodeHandle, nuint index, out Native.OtioNode outEffect);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_remove_marker(IntPtr target, Native.OtioNode nodeHandle, nuint index, out Native.OtioNode outMarker);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_set_color(IntPtr target, Native.OtioNode nodeHandle, Native.OtioColor color, IntPtr name);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_set_enabled(IntPtr target, Native.OtioNode nodeHandle, byte enabled);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_set_source_range(IntPtr target, Native.OtioNode nodeHandle, Native.OtioTimeRange range);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_source_range(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_trimmed_range(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_trimmed_range_in_parent(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_item_visible_range(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void otio_buffer_free(Native.OtioBuffer buffer);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double otio_default_epsilon_s();

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nuint otio_default_indent();

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr otio_error_message();

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr otio_status_name(Status outcome);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr otio_version();

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_linear_time_warp_new(IntPtr target, IntPtr name, double timeScalar, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_marker_color(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioColor outColor, out Native.OtioBuffer outName);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_marker_comment(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outComment);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_marker_marked_range(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_marker_new(IntPtr target, IntPtr name, Native.OtioTimeRange markedRange, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_marker_set_color(IntPtr target, Native.OtioNode nodeHandle, Native.OtioColor color, IntPtr name);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_marker_set_comment(IntPtr target, Native.OtioNode nodeHandle, IntPtr comment);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_marker_set_marked_range(IntPtr target, Native.OtioNode nodeHandle, Native.OtioTimeRange range);
